# rust-be

./: .dockerignore  .env.example  .env.production  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile.toml  README.md  backup.sql  docker-compose.yml  docker-entrypoint.sh  docker.md  https.md  rust-toolchain.toml
.github/workflows/: all-tests.yaml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/appointment/: routes.rs  services.rs
crates/api/src/auth/: routes.rs  services.rs
crates/api/src/chat/: mod.rs  routes.rs  services.rs
crates/api/src/deposit/: routes.rs  services.rs
crates/api/src/macro_service/: mod.rs  user_macro.rs
crates/api/src/notification/: mod.rs  routes.rs  services.rs
crates/api/src/notification_token/: routes.rs  services.rs
crates/api/src/profile/: mod.rs  routes.rs  services.rs
crates/api/src/service/: mod.rs  routes.rs  service_child.rs  services.rs
crates/api/src/statistics/: routes.rs  services.rs
crates/api/src/user/: mod.rs  routes.rs  services.rs  services_v0.rs  services_v1.rs
crates/app/: Cargo.toml
crates/app/src/: cron.rs  main.rs  trace.rs
crates/app/src/api_docs/: mod.rs
crates/core_app/: Cargo.toml
crates/core_app/src/: configs-v0.rs  configs.rs  errors.rs  lib.rs  response.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/auth/: request.rs  token.rs
crates/domain/src/entities/: appointment.rs  auth.rs  chat.rs  common.rs  deposit.rs  mod.rs  notification.rs  notification_token.rs  profile.rs  service.rs  service_child.rs  statistics.rs  user.rs  zalo.rs
crates/domain/src/log/: mod.rs
crates/domain/src/repositories/: appointment_repository.rs  chat_repository.rs  deposit_repository.rs  image_repository.rs  mod.rs  noti_token_repository.rs  notification_repository.rs  profile_repository.rs  service_child_repository.rs  service_repository.rs  statistics_repository.rs  user_repository.rs
crates/domain/src/services/: appointment.rs  chat.rs  image.rs  mod.rs  notification.rs  notification_token.rs  profile.rs  service.rs  service_child.rs  statistics.rs  user.rs
crates/domain/src/user/: request.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs
crates/infra/src/auth/: mod.rs
crates/infra/src/base/: macos_untils.rs  mod.rs
crates/infra/src/database/: mod.rs  schema.rs
crates/infra/src/events/: mod.rs  twilio.rs  zalo.rs
crates/infra/src/firebase/: mod.rs
crates/infra/src/middleware/: map_response_v0.rs  mod.rs  mw_auth.rs  mw_response_v1.rs
crates/infra/src/repositories/: mod.rs
crates/infra/src/repositories/appointment/: common.rs  mod.rs  send_noti.rs
crates/infra/src/repositories/auth/: common.rs  mod.rs
crates/infra/src/repositories/base/: macros_untils.rs  mod.rs
crates/infra/src/repositories/chat/: mod.rs
crates/infra/src/repositories/deposit/: mod.rs
crates/infra/src/repositories/image/: mod.rs
crates/infra/src/repositories/notification/: mod.rs
crates/infra/src/repositories/notification_token/: mod.rs
crates/infra/src/repositories/profile/: mod.rs
crates/infra/src/repositories/service/: mod.rs  service_child.rs
crates/infra/src/repositories/statistics/: mod.rs
crates/infra/src/repositories/user/: mod.rs
crates/infra/src/user/: example_raw_query.rs  mod.rs
crates/utils/: Cargo.toml
crates/utils/src/: deserialize.rs  format_number.rs  helper.rs  lib.rs  password.rs  pre_process.rs
migrations/: 0001_initiallized.down.sql  0001_initiallized.up.sql  0002_update_columns_user.down.sql  0002_update_columns_user.up.sql  0002_update_token_table.down.sql  0002_update_token_table.up.sql  0003_create_chat_message.down.sql  0003_create_chat_message.up.sql  0003_create_token_table.down.sql  0003_create_token_table.up.sql  0004_create_phone_code_table.down.sql  0004_create_phone_code_table.up.sql  0005_add_columns_address.down.sql  0005_add_columns_address.up.sql  0006_add_table_service.down.sql  0006_add_table_service.up.sql  0007_add_trigger_update_time.down.sql  0007_add_trigger_update_time.up.sql  0008_add_columns_image.down.sql  0008_add_columns_image.up.sql  0009_add_columns_image_service.down.sql  0009_add_columns_image_service.up.sql  0010_add_column_language_service.down.sql  0010_add_column_language_service.up.sql  0011_add_table_service_item.down.sql  0011_add_table_service_item.up.sql  0012_add_table_appointments.down.sql  0012_add_table_appointments.up.sql  0013_create_notifications.down.sql  0013_create_notifications.up.sql  0014_add_admin_user.down.sql  0014_add_admin_user.up.sql  0015_add_services_data.down.sql  0015_add_services_data.up.sql  0016_update_columns_service.down.sql  0016_update_columns_service.up.sql  0017_update_columns_appoiment_service_1.down.sql  0017_update_columns_appoiment_service_1.up.sql  0018_allow_null_user_id_notifications.down.sql  0018_allow_null_user_id_notifications.up.sql  (+27 more)
uploads/banners/: banner4.avif  banner5.avif  banner6.avif  banner7.avif
