
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tracing = "0.1.41"
modql = { version = "0.4.1", features = ["with-sea-query"] }
sea-query = { version = "0.32.2" }
serde_json = "1.0.135"
config = { version = "0.15.6" }
serde = { version = "1.0.217", features = ["derive"] }
argon2 = "0.5.3"
