[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.1", features = ["tracing", "multipart"] }
async-trait = "0.1"
tracing = "0.1.41"
modql = { version = "0.4.1", features = ["with-sea-query"] }
sea-query = { version = "0.32.2" }
serde_json = "1.0.135"
config = { version = "0.15.6" }
serde = { version = "1.0.217", features = ["derive"] }
argon2 = "0.5.3"
regex = "1.11.1"
chrono = { version = "0.4.34", features = ["serde"] }
utoipa = { version = "5.3.1", features = [
  "axum_extras",
  "uuid",
  "serde_yaml",
  "chrono",
  "macros",
] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
image = "0.25.6"
tower-http = { version = "0.6.2", features = ["compression-full", "full"] }
tower = { version = "0.5.2", features = ["full"] }
futures = "0.3"
turbojpeg = { version = "1.0", features = ["image"] }
sqlx = { version = "0.8.3", features = [
  "macros",
  "uuid",
  "chrono",
  "postgres",
  "runtime-tokio-native-tls",
] }
anyhow = "1.0"
gcp_auth = "0.12.3"
dotenv = "0.15.0"
