[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio-native-tls",
] }

tracing.workspace = true
sea-query.workspace = true
modql.workspace = true
serde_json.workspace = true

#Member
core_app = { path = "../core_app" }
infra = { path = "../infra" }
domain = { path = "../domain" }
utils = { path = "../utils" }
