[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
tracing.workspace = true
sea-query.workspace = true
modql.workspace = true
serde_json.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
axum = { workspace = true }
tokio.workspace = true
tower-http.workspace = true
futures.workspace = true
sqlx.workspace = true
chrono.workspace = true

#Member
core_app = { path = "../core_app" }
infra = { path = "../infra" }
domain = { path = "../domain" }
utils = { path = "../utils" }
tokio-util = { version = "0.7.15", features = ["io"] }
