[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio-native-tls",
] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
num_cpus = "1.16.0"
tracing-appender = "0.2.3"
chrono = "0.4.39"

tracing.workspace = true
modql.workspace = true


#Member
core_app = { path = "../core_app" }
infra = { path = "../infra" }
api = { path = "../api" }
tower-http = { version = "0.6.2", features = ["compression-full", "full"] }
tower = { version = "0.5.2", features = ["full"] }
