[package]
name = "domain"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio-native-tls",
] }
thiserror = "1.0.56"
async-trait = "0.1"
chrono = { version = "0.4.34", features = ["serde"] }

#Member
utils = { path = "../utils" }
core_app = { path = "../core_app" }
modql.workspace = true
sea-query.workspace = true
