[package]
name = "domain"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "1.0.56"

#Member
utils = { path = "../utils" }
core_app = { path = "../core_app" }

modql.workspace = true
sea-query.workspace = true
regex.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
tracing.workspace = true
tokio.workspace = true
sqlx.workspace = true
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
