[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]

sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres"] }
uuid = { version = "1.14.0", features = ["v4"] }
serde_json = "1.0.139"
fast_image_resize = "5.1.3"

#Member
core_app = { path = "../core_app" }
domain = { path = "../domain" }
utils = { path = "../utils" }

tracing.workspace = true
modql.workspace = true
sea-query.workspace = true
chrono.workspace = true
async-trait.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
tokio.workspace = true
axum.workspace = true
image.workspace = true
turbojpeg.workspace = true
sqlx.workspace = true
fcm = { workspace = true }
anyhow.workspace = true
